[REST] crypto transactions handler.
